--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,8 @@ dataRetrieval 2.5.12
 * Added NWIS Water Use data
 * Added NWIS Statistical Service data
 * Added message on updates to NWIS data on startup message
-* Automatically retries web service calls when status code is greater than 400.
+* Automatically retries web service calls when status code is greater than 400
+* More integrated use of pkg.env to set base URLs
 
 dataRetrieval 2.5.7
 ==========
