--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+dataRetrieval 2.7.1
+==========
+* Converted vignette to html
+
 dataRetrieval 2.7.0
 ==========
 * Added National Groundwater Monitoring Network services
